syntax = "proto3";
package service.v1;

enum ModState {
  MOD_STATE_UNSPECIFIED = 0;
  MOD_STATE_INACTIVE = 1;
  MOD_STATE_ACTIVE = 2;
}

message Mod {
  string name = 1;
  ModState state = 2;
  optional string active_version = 3;
  optional string origin = 4;
}

message Pak {
  string uuid = 1;
  string name = 2;
  string path = 3;
  bool active = 4;
}

message StagedMod {
  string name = 1;
  ModState state = 2;
  string origin = 3;
  string active_version = 4;
  string active_version_id = 5;
}

message Archive {
  string name = 1;
  string archive_path = 2;
  string md5_sum = 3;
  bool installed = 4;
}

message Choice {
  string id = 1;
  string name = 2;
  string full_path = 3;
}

enum DeleteModType {
  DELETE_MOD_TYPE_UNSPECIFIED = 0;
  DELETE_MOD_TYPE_ALL = 1;
  DELETE_MOD_TYPE_ACTIVE = 2;
}
